--- a/doc/ReleaseNotes.txt
+++ b/doc/ReleaseNotes.txt
@@ -15,16 +15,20 @@
 *******************************************************************************
 
 
+
+xflr5 v6.41 February xxxth, 2018
+	- added an option to import/export wings to xml format
+
 xflr5 v6.40 January 7th, 2018
-	- fixed a bug which caused the a stability analysis to calculate the operating point with the aoa of the previous calculation.
-	- improved the construction method for the wake in the 3d-panel method; makes a small difference to induce drag
+	- fixed a bug which caused a stability analysis to calculate the operating point with the aoa
+	of the previous calculation. negligeable impact on results
 	- corrected a potential crash bug when trying to display 3D results of an LLT calculation
 	- removed the default suffix "-proj_area" from the name of plane polars
 	- restored the output of non-dimensional control derivatives in the operating point properties
 	- restored the option to export BL data to text files
 	- restored the option to enable or disable autosave which was always turned on
 	- included the missing NURBS degrees in the serialization of the body objects
-	- added a protection to the max degree of NURBS vs point count
+	- added a protection to the max degree of NURBS vs. point count
 	- code cleaning
 
 
