--- a/xflr5/doc/ReleaseNotes.txt
+++ b/xflr5/doc/ReleaseNotes.txt
@@ -19,6 +19,7 @@
 xflr5 v6.41 February xxxth, 2018
 	- added an option to import/export wings to xml format
 	- corrected the export of flat panel bodies to STL to avoid null triangles
+	- code cleaning
 
 xflr5 v6.40 January 7th, 2018
 	- fixed a bug which caused a stability analysis to calculate the operating point with the aoa
