--- a/xflr5/doc/ReleaseNotes.txt
+++ b/xflr5/doc/ReleaseNotes.txt
@@ -16,10 +16,11 @@
 
 
 xflr5 v6.42 May xxx 2018
+    - restored the option in Windows and linux to launch the app by opening a project.xfl, polar.plr, or foil.dat file
 	- corrected a bug which prevented the reference dimensions of an analysis to be updated when the geometry
 	  is modified by the user
 	- moved the XFoil and plane analysis engines in separate shared libraries for future re-use
-	- quick and dirty fix for bug report #114: added an option to enable/disable the clip plane in the 3d display options.
+	- fix for bug report #114; as a fallback also added an option to enable/disable the clip plane in the 3d display options.
 
 
 xflr5 v6.41 April 22, 2018
