--- a/doc/ReleaseNotes.txt
+++ b/doc/ReleaseNotes.txt
@@ -15,12 +15,14 @@
 *******************************************************************************
 
 
-xflr5 v6.42 May xxx 2018
+xflr5 v6.42 May 19th 2018
     - restored the option in Windows and linux to launch the app by opening a project.xfl, polar.plr, or foil.dat file
 	- corrected a bug which prevented the reference dimensions of an analysis to be updated when the geometry
 	  is modified by the user
-	- moved the XFoil and plane analysis engines in separate shared libraries for future re-use
+	- moved the XFoil and plane analysis modules in separate shared libraries for future re-use
 	- fix for bug report #114; as a fallback also added an option to enable/disable the clip plane in the 3d display options.
+	- fixed a bag crash bug when typing a number 6+ to request the display of an inexistent graph
+	- fixed the display of shortcuts in the menu for MacOS
 
 
 xflr5 v6.41 April 22, 2018
