--- a/xflr5/doc/ReleaseNotes.txt
+++ b/xflr5/doc/ReleaseNotes.txt
@@ -15,7 +15,11 @@
 *******************************************************************************
 
 
-xflr5 v6.42 May 19th 2018
+xflr5 v6.43 August xxx, 2018
+	- forced thin surface analysis whenever more than one wing is defined
+	- set the "ignore body panels" to true by default in the definition of the 3d analysis
+
+xflr5 v6.42 May 19th, 2018
     - restored the option in Windows and linux to launch the app by opening a project.xfl, polar.plr, or foil.dat file
 	- corrected a bug which prevented the reference dimensions of an analysis to be updated when the geometry
 	  is modified by the user
