--- a/doc/ReleaseNotes.txt
+++ b/doc/ReleaseNotes.txt
@@ -16,6 +16,7 @@
 
 
 xflr5 v6.43 August xxx, 2018
+    - corrected a bug in the display of inertia values for a wing or body - no impact on results
     - fixes for request #117 relative to the construction of double fins for a plane with a body
 	- corrected the wrong sign of viscous pitching and yawing moments - slight impact on results
 	- forced thin surface analysis whenever more than one wing is defined
