--- a/doc/ReleaseNotes.txt
+++ b/doc/ReleaseNotes.txt
@@ -17,7 +17,8 @@
 
 xflr5 v6.44 September xxxth, 2018
     - added an optional automatic check for updates at startup
-
+    - fix for bug report #121 - synchronized the background image position with the object views
+    - mod for request #124 - added an option in the spline parameters to force closed LE and TE.
 
 xflr5 v6.43 August 27th, 2018
     - improved the VLM mesh of flapped surfaces with hinge points located at different %chord
