Completed the archiving of the default plane polar with all of its data. Incremented the format of the project file to 200002.

--- a/doc/ReleaseNotes.txt
+++ b/doc/ReleaseNotes.txt
@@ -19,6 +19,9 @@ xflr5 v6.44 September xxxth, 2018
     - added an optional automatic check for updates at startup
     - fix for bug report #121 - synchronized the background image position with the object views
     - mod for request #124 - added an option in the spline parameters to force closed LE and TE.
+    - Completed the archiving of the default plane polar with all of its data.
+      Incremented the format of the project file to 200002.
+
 
 xflr5 v6.43 August 27th, 2018
     - improved the VLM mesh of flapped surfaces with hinge points located at different %chord
