--- a/xflr5/doc/ReleaseNotes.txt
+++ b/xflr5/doc/ReleaseNotes.txt
@@ -16,6 +16,7 @@
 
 
 xflr5 v6.44 November xxxth, 2018
+    - Feature request #127: shortcut added for the menu entries "show only associated polars"
     - prevented the multiple repaint of surface velocities in the 3d view
     - corrected minor errors in the derotate operation of airfoils
     - corrected translations errors from fortran to C in the XFoil flap setting routine - thanks to Nicolas C.
