--- a/doc/ReleaseNotes.txt
+++ b/doc/ReleaseNotes.txt
@@ -7,7 +7,7 @@
                      A tool for the design of Airfoils, Wings and Planes
                           operating at low Reynolds numbers
 
-                                 Copyright (C) 2003-2018
+                                 Copyright (C) 2003-2019
 
                                      Andre Deperrois
 
@@ -16,6 +16,7 @@
 
 
 xflr5 v6.44 November xxxth, 2018
+    - Fix for bug report #126 relative to the highlighting of frames in the advanced fuse editor
     - Feature request #127: shortcut added for the menu entries "show only associated polars"
     - prevented the multiple repaint of surface velocities in the 3d view
     - corrected minor errors in the derotate operation of airfoils
