--- a/xflr5/doc/ReleaseNotes.txt
+++ b/xflr5/doc/ReleaseNotes.txt
@@ -15,11 +15,12 @@
 *******************************************************************************
 
 
-xflr5 v6.45 January xxxth, 2019
+xflr5 v6.45 February xxxth, 2019
+    - fixed a crash bug when trying to plot BL graphs without an active operating point
     - corrected the names of some variables in boundary layer plots
     - corrected imperial unit conversions in the foil polar definition
     - changed the unix directory for shared files to /usr/local/share instead of /usr/share
-    - increased the samplng of the foil's mid camber line from 100 to 1000 points; this improves
+    - increased the sampling of the foil's mid camber line from 100 to 1000 points; this improves
       the precision of the calculated camber and thickness value and position
     - code cleaning
 
