--- a/xflr5/doc/ReleaseNotes.txt
+++ b/xflr5/doc/ReleaseNotes.txt
@@ -16,6 +16,8 @@
 
 
 xflr5 v6.45 March xxxth, 2019
+    - disabled the auto-check for update feature due to crash bugs on some systems
+    - updated the German and French translations
     - added VAO support for the OpenGL 3.2+ core profile
     - fixed a crash bug when trying to plot BL graphs without an active operating point
     - corrected the names of some variables in boundary layer plots
