Fixed potential crash bugs when deleting planes or foils from the Manage options

--- a/xflr5/doc/ReleaseNotes.txt
+++ b/xflr5/doc/ReleaseNotes.txt
@@ -16,6 +16,7 @@
 
 
 xflr5 v6.47 June xxxth, 2019
+    - Fixed potential crash bugs when deleting planes or foils from the Manage options
     - Corrected a crash bug when running a 3d panel analysis from and old project files due to no wake defined
     - Corrected a minor output error in LLT analysis
     - Modified the color display of Cp coefficients in the 3d view, to render more accurately the uniformity of singularities on panels
