added an option to set style flow-down from the LinePicker dialog

--- a/xflr5/doc/ReleaseNotes.txt
+++ b/xflr5/doc/ReleaseNotes.txt
@@ -19,7 +19,7 @@
 xflr5 v6.48 July xxxth, 2019
     - corrected the bug which caused unconverged XFoil operating points to be stored
     - removed the addition of .dat and .plr type files to the recent file menu list
-
+    - added an option to set style flow-down from the LinePicker dialog
 
 
 xflr5 v6.47 July 7th, 2019
