--- a/xflr5/doc/ReleaseNotes.txt
+++ b/xflr5/doc/ReleaseNotes.txt
@@ -16,7 +16,8 @@
 
 
 
-xflr5 v6.48 November xxxth, 2019
+xflr5 v6.48 December xxxth, 2019
+    - added a scripting capability for foil analyses to complement the flow5 plane scripts
     - added an option to select the OpenGL format from the in-app test window
     - added an option to select the OpenGL format and the trace flag when launching the app from the command line
     - fix for request #144
